--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,3 +1,4 @@
+
 .card {
     text-align: center;
     border: green solid 1px;
@@ -12,3 +13,8 @@
   #toy-collection {
     margin: 2rem;
   }
+
+  .add-toy-form {
+    width: 80%
+  }
+  
