Changed event listener and added a function to it

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -10,11 +10,11 @@
     box-shadow: 3px 4px #664be0
   }
   
-  #toy-collection {
+  #task-collection {
     margin: 2rem;
   }
 
-  .add-toy-form {
+  .add-hw-tasks {
     width: 80%
   }
   
